Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-134664

FAIL! : tst_examples::examples(examples/quick/multieffect/testbed/qml/main.qml) Received a fatal error

XMLWordPrintable

    • macOS
    • 7ca122229 (dev), 3e8837472 (6.9), 1d61b3c06 (6.8), ef739f604 (tqtc/lts-6.5), a2b955783 (tqtc/lts-5.15)

      ********* Start testing of tst_examples *********
      Config: Using QtTest library 6.10.0, Qt 6.10.0 (arm64-little_endian-lp64 shared (dynamic) debug build; by Apple LLVM 15.0.0 (clang-1500.3.9.4)), macos 15.0
      PASS   : tst_examples::initTestCase()
      2025-03-13 04:03:32.936 tst_quick_examples[9994:43000] +[IMKClient subclass]: chose IMKClient_Legacy
      PASS   : tst_examples::examples(examples/quick/animation/basics/animators.qml)
      PASS   : tst_examples::examples(examples/quick/animation/basics/color-animation.qml)
      PASS   : tst_examples::examples(examples/quick/animation/basics/property-animation.qml)
      PASS   : tst_examples::examples(examples/quick/animation/behaviors/behavior-example.qml)
      PASS   : tst_examples::examples(examples/quick/animation/behaviors/tvtennis.qml)
      PASS   : tst_examples::examples(examples/quick/animation/behaviors/wigglytext.qml)
      PASS   : tst_examples::examples(examples/quick/animation/easing/easing.qml)
      PASS   : tst_examples::examples(examples/quick/animation/pathanimation/pathanimation.qml)
      PASS   : tst_examples::examples(examples/quick/animation/pathinterpolator/pathinterpolator.qml)
      PASS   : tst_examples::examples(examples/quick/animation/states/states.qml)
      PASS   : tst_examples::examples(examples/quick/animation/states/transitions.qml)
      PASS   : tst_examples::examples(examples/quick/canvas/bezierCurve/bezierCurve.qml)
      PASS   : tst_examples::examples(examples/quick/canvas/clip/clip.qml)
      PASS   : tst_examples::examples(examples/quick/canvas/quadraticCurveTo/quadraticCurveTo.qml)
      PASS   : tst_examples::examples(examples/quick/canvas/roundedrect/roundedrect.qml)
      PASS   : tst_examples::examples(examples/quick/canvas/smile/smile.qml)
      PASS   : tst_examples::examples(examples/quick/canvas/squircle/squircle.qml)
      PASS   : tst_examples::examples(examples/quick/canvas/tiger/tiger.qml)
      PASS   : tst_examples::examples(examples/quick/draganddrop/external/externaldraganddrop.qml)
      PASS   : tst_examples::examples(examples/quick/draganddrop/tiles/tiles.qml)
      PASS   : tst_examples::examples(examples/quick/draganddrop/views/gridview.qml)
      PASS   : tst_examples::examples(examples/quick/multieffect/itemswitcher/qml/main.qml)
      PASS   : tst_examples::examples(examples/quick/multieffect/neumorphicpanel/qml/main.qml)
      QFATAL : tst_examples::examples(examples/quick/multieffect/testbed/qml/main.qml) ASSERT: "truncatedValue >= FP((std::numeric_limits<Result>::min)())" in file /Users/qt/work/install/lib/QtCore.framework/Headers/qnumeric.h, line 507
      FAIL!  : tst_examples::examples(examples/quick/multieffect/testbed/qml/main.qml) Received a fatal error.
         Loc: [/Users/qt/work/install/lib/QtCore.framework/Headers/qnumeric.h(507)]
      Totals: 24 passed, 1 failed, 0 skipped, 0 blacklisted, 1533ms
      ********* Finished testing of tst_examples *********
      

      Build log: https://testresults.qt.io/logs/qt/qtdeclarative/41f7aa9f5ef798219908e25be27233681784f4c7/MacOSMacOS_15arm64MacOSMacOS_15arm64Clangqtci-macos-15-arm-104-5eaa1cTestOnly/878845a3823dfa243ff1af2c807c4a3d060ecb4a/test_1741837790/log.txt.gz

      Details: https://testresults.qt.io/coin/integration/qt/qtdeclarative/tasks/1741837733

      Tested changes (refs/builds/qtci/dev/1741837732):
      https://codereview.qt-project.org/c/qt/qtdeclarative/+/631166/2 Update dependencies on 'dev' in qt/qtdeclarative

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            esabraha Eskil Abrahamsen Blomfeldt
            janihe Jani Heikkinen
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: